--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,26 @@
 ---
+
 ---
-<footer class="bg-primary-500 text-white">
-    <div class="container mx-auto p-4">
-        <p>&copy; 2025</p>
+
+<footer class="bg-accent-500 text-black">
+  <div class="grid md:grid-cols-3 mx-auto p-10 md:gap-20">
+    <div class="gap-2 flex flex-col pb-10">
+      <a href="http://">logo her</a>
+      <a href="http://">logo her</a>
     </div>
+    <div class="grid grid-cols-2 gap-10 md:contents">
+      <div class="gap-2 flex flex-col">
+        <p class="underline">Om børnebiffen</p>
+        <p class="underline">Tilgengægelighedserklaring</p>
+        <p class="underline">Cookies</p>
+        <p class="underline">Privatpolitik</p>
+        <p class="underline">Kontakt os</p>
+      </div>
+      <div class="gap-2 flex flex-col pl-10">
+        <p>DBC DIGITAL A/S</p>
+        <p>Tempovej 7-11</p>
+        <p>2750 Ballerup</p>
+      </div>
+    </div>
+  </div>
 </footer>
