--- a/src/pages/singleview.astro
+++ b/src/pages/singleview.astro
@@ -10,15 +10,7 @@ import Button from "../components/Button.astro";
 
 <MainLayout title="Titel">
   <main class="container mx-auto p-4">
-    <section>
-      <Heading htmlheading="h1">UDFORSK EN VERDEN AF LÆRERIGE VIDEOER</Heading>
-    </section>
-    <section>
-      <Text teksttype="brødtekst">DOWNLOAD BØRNEBIFFEN PÅ DIN ENHED</Text>
-      <div>
-        <button>Download</button>
-        <button>Download</button>
-      </div>
-    </section>
+    <Heading htmlheading="h1">Lav noget flot!</Heading>
+    <Text teksttype="brødtekst">Så bliver Anders glad:-)</Text>
   </main>
 </MainLayout>
