--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -11,9 +11,9 @@ const sizeClasses = {
   large2: "text-[30px]",
   medium2: "text-[24px]",
   small2: "text-[24px]",
-  largep: "text-[20px]",
-  mediump: "text-[16px]",
-  smallp: "text-[16px]",
+  large3: "text-[20px]",
+  medium3: "text-[16px]",
+  small3: "text-[13px]",
 };
 
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige skrifttyper.
