--- a/src/pages/komponentbibliotek.astro
+++ b/src/pages/komponentbibliotek.astro
@@ -25,13 +25,11 @@ import thumbsup from "../assets/images/thumbsup.png";
       <Heading htmlheading="h2" size="medium2" font="serif">h2 - Tablet - serif</Heading>
       <Heading htmlheading="h3" size="small2" font="serif">h3 - Mobile - serif</Heading>
       <p class="pt-5">Titillium Web</p>
-      <Text teksttype="brødtekst">
-        Her er en sektion brødtekst: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam dolorem doloremque commodi eaque quisquam quasi recusandae veniam. Corporis totam <Link href="#">Default link: </Link> reiciendis quibusdam ratione iure aut, numquam tenetur voluptatem exercitationem sequi enim!
+      <Text teksttype="brødtekst" size="large3">
+        Her er en sektion brødtekst til web: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam dolorem doloremque commodi eaque quisquam quasi recusandae veniam. Corporis totam <Link href="#">Default link: </Link> reiciendis quibusdam ratione iure aut, numquam tenetur voluptatem exercitationem sequi enim!
       </Text>
-      <Text teksttype="konsultativ"> Her en sektion konsultativ tekst: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam dolorem doloremque commodi eaque quisquam quasi recusandae veniam. Corporis totam reiciendis quibusdam ratione iure aut, numquam tenetur voluptatem exercitationem sequi enim! </Text>
-      <Text teksttype="brødtekst" stylingclasses="italic">
-        Her er en sektion brødtekst med ekstra css: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam dolorem doloremque commodi eaque quisquam quasi recusandae veniam. Corporis totam <Link href="#">Default link: </Link> reiciendis quibusdam ratione iure aut, numquam tenetur voluptatem exercitationem sequi enim!
-      </Text>
+      <Text teksttype="brødtekst" size="medium3"> Her en sektion brødtekst til mobile: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam dolorem doloremque commodi eaque quisquam quasi recusandae veniam. Corporis totam reiciendis quibusdam ratione iure aut, numquam tenetur voluptatem exercitationem sequi enim! </Text>
+      <Text teksttype="brødtekst" size="small3"> Her en sektion brødtekst til mobile: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam dolorem doloremque commodi eaque quisquam quasi recusandae veniam. Corporis totam reiciendis quibusdam ratione iure aut, numquam tenetur voluptatem exercitationem sequi enim! </Text>
     </section>
     <!-- slut på typografi -->
     <hr class="my-4" />
