--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -34,6 +34,8 @@
   --color-accent-400: #e39d54;
   --color-accent-500: #dc8233;
   --color-accent-600: #cc6a28;
+  --color-hover-200: #FACFAE;
+  --color-active-100:#FDE9D7;
   --color-text-500: #492B0B
 
   /*Typografi */
