--- a/src/pages/komponentbibliotek.astro
+++ b/src/pages/komponentbibliotek.astro
@@ -4,8 +4,10 @@ import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
 import Link from "../components/Link.astro";
 import Button from "../components/Button.astro";
-import { Image } from "astro:assets";
-import thumbsup from "../assets/images/thumbsup.png";
+import Searchbar from "../components/Searchbar.astro";
+import Dropdown from "../components/Dropdown.astro";
+import FilmCard from "../components/FilmCard.astro";
+import CardContainer from "../components/CardContainer.astro";
 ---
 
 <MainLayout title="Titel">
@@ -35,20 +37,7 @@ import thumbsup from "../assets/images/thumbsup.png";
     </section>
     <!-- slut på typografi -->
     <hr class="my-4" />
-    <!-- Link komponent instanser -->
-    <section>
-      <Heading htmlheading="h2" size="medium">Links</Heading>
-      <Text teksttype="brødtekst"><Link href="#">Default link: </Link>Default linket er en del af en tekst, og burde gerne fungere som et <Link href="#">link</Link> i en paragraf.</Text>
-      <Text><Link href="#" variant="primary">Link variant: primary</Link></Text>
-      <Text><Link href="#" variant="primary" size="small">Link variant: primary size small</Link></Text>
-      <Text><Link href="#" variant="primary" size="medium">Link variant: primary size medium</Link></Text>
-      <Text><Link href="#" variant="primary" size="large">Link variant: primary size large</Link></Text>
-      <Text><Link href="#" variant="secondary" size="small">Link variant: secondary size small</Link></Text>
-      <Text><Link href="#" variant="secondary" size="medium">Link variant: secondary size medium</Link></Text>
-      <Text><Link href="#" variant="secondary" size="large">Link variant: secondary size large</Link></Text>
-    </section>
-    <!-- Slut på Link komponent instanser -->
-    <hr class="my-4" />
+
     <!-- Buttons komponent instanser -->
     <section>
       <Heading htmlheading="h2" size="medium">Buttons</Heading>
@@ -57,10 +46,33 @@ import thumbsup from "../assets/images/thumbsup.png";
       <Text><Button variant="primary" size="small">Button variant: primary size small</Button></Text>
       <Text><Button variant="primary" size="medium">Button variant: primary size medium</Button></Text>
       <Text><Button variant="primary" size="large">Button variant: primary size large</Button></Text>
-      <Text><Button variant="secondary" size="small">Button variant: secondary size small</Button></Text>
-      <Text><Button variant="secondary" size="medium">Button variant: secondary size medium</Button></Text>
-      <Text><Button variant="secondary" size="large">Variant: secondary size large</Button></Text>
     </section>
     <!-- Slut på Buttons komponent instanser -->
-  </main>
-</MainLayout>
+    <hr class="my-4" />
+
+    <!-- Searchbar komponent instanser -->
+    <section>
+      <Searchbar />
+    </section>
+    <hr class="my-4" />
+    <!-- DropDown komponent instanser -->
+    <section>
+      <Dropdown title="Alder" items={["3 år", "4 år", "5 år", "6 år", "7 år"]} />
+    </section>
+    <hr class="my-4" />
+    <section>
+      <FilmCard image="/lillefro.png" alt="Produkt 1" title="Lille Frø" description="8" />
+    </section>
+
+    <hr class="my-4" />
+
+    <section>
+      <CardContainer title="Se videre">
+        <FilmCard image="/lillefro.png" alt="Produkt 1" title="Lille Frø" description="8" />
+        <FilmCard image="/lillefro.png" alt="Produkt 1" title="Lille Frø" description="8" />
+        <FilmCard image="/lillefro.png" alt="Produkt 1" title="Lille Frø" description="8" />
+        <FilmCard image="/lillefro.png" alt="Produkt 1" title="Lille Frø" description="8" />
+      </CardContainer>
+    </section>
+  </main></MainLayout
+>
