--- a/src/pages/listview.astro
+++ b/src/pages/listview.astro
@@ -1,16 +1,31 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
-import Link from "../components/Link.astro";
-import { Image } from "astro:assets";
-import thumbsup from "../assets/images/thumbsup.png";
+
 import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
-import Button from "../components/Button.astro";
+
+import Dropdown from "../components/Dropdown.astro";
+import CardContainer from "../components/CardContainer.astro";
+import FilmCard from "../components/FilmCard.astro";
 ---
 
 <MainLayout title="Titel">
   <main class="container mx-auto p-4">
-    <Heading htmlheading="h1">Lav noget flot!</Heading>
-    <Text teksttype="brødtekst">Så bliver Anders glad:-)</Text>
+    <section>
+      <h1>Hvad søger du?</h1>
+      <div>
+        <Dropdown title="Alder" items={["3 år", "4 år", "5 år", "6 år", "7år"]} />
+        <Dropdown title="Genre" items={["Seneste nyt", "Til de yngste", "Til de ældste"]} />
+        <Dropdown title="Varighed" items={["5 min", "10 min", "20 min", "30 min", "45 min", "+60 min"]} />
+      </div>
+    </section>
+    <section class="Cardcontainer w-screen relative left-1/2 -translate-x-1/2">
+      <CardContainer title="Se videre">
+        <FilmCard image="/lillefro.png" alt="Produkt 1" title="Lille Frø" description="8" />
+        <FilmCard image="/2.png" alt="Produkt 1" title="Ræven og nissen" description="9" />
+        <FilmCard image="/3.png" alt="Produkt 1" title="Flagermusen" description="4" />
+        <FilmCard image="/4.png" alt="Produkt 1" title="En lille smule" description="9" />
+      </CardContainer>
+    </section>
   </main>
 </MainLayout>
