--- a/src/components/CardContainer.astro
+++ b/src/components/CardContainer.astro
@@ -2,8 +2,8 @@
 const { title = "" } = Astro.props;
 ---
 
-<section class="bg-secondary-300 p-8">
-  <h2 class="text-2xl font-semibold mb-4">{title}</h2>
+<section class="p-8 bg-top h-100" style="background-image: url('/cardbg.png')">
+  <h2 class="text-2xl font-semibold mt-4 mb-4">{title}</h2>
   <div class="grid grid-cols-4 gap-95 max-h-100 overflow-y-auto pr-5 pl-1">
     <slot />
   </div>
