--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Link from "../components/Link.astro";
 import { Image } from "astro:assets";
-import thumbsup from "../assets/images/thumbsup.png";
 import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
 import Button from "../components/Button.astro";
@@ -10,9 +9,9 @@ import Button from "../components/Button.astro";
 
 <MainLayout title="Titel">
   <main class="container mx-auto p-4">
-    <section class="text-center mx-auto relative">
-      <Heading htmlheading="h1"
-        >UDFORSK EN VERDEN AF
+    <section class="text-center mx-auto pt-15 relative">
+      <h1 class="font-display text-[26px] md:text-[50px]">
+        UDFORSK EN VERDEN AF
         <span class="text-blue-700">L</span>
         <span class="text-orange-700">Æ</span>
         <span class="text-purple-700">R</span>
@@ -21,9 +20,12 @@ import Button from "../components/Button.astro";
         <span class="text-green-700">I</span>
         <span class="text-blue-700">G</span>
         <span class="text-pink-700">E</span>
-        VIDEOER</Heading
-      >
-      <button>Knap</button>
+        VIDEOER
+      </h1>
+
+      <div class="pt-5 animate-bounce animate-infinite animate-duration-[2000ms] animate-delay-0 animate-ease-in">
+        <Text><Button>Log in</Button></Text>
+      </div>
       <div class="absolut w-25 md:w-60">
         <img src="src/assets/images/mus2.svg" alt="mus" />
       </div>
@@ -36,6 +38,10 @@ import Button from "../components/Button.astro";
     </section>
     <section class="absolute top-65 md:top-70 left-33 md:left-115">
       <p class="text-[12px] md:text-[26px]">DOWNLOAD BØRNEBIFFEN PÅ DIN ENHED</p>
+      <div class="flex flex-col items-center pt-2 gap-1 md:pt-4 md:gap-2">
+        <img class="w-25 md:w-40" src="src/assets/images/appstore.svg" alt="appstore" />
+        <img class="w-25 md:w-40" src="src/assets/images/googleplay.svg" alt="googleplay" />
+      </div>
     </section>
     <div class="absolute top-58 left-26 md:top-65 md:left-106 animate-jump animate-infinite animate-duration-[2000ms] animate-delay-0 animate-ease-linear">
       <img src="src/assets/images/pyntvenstre.svg" alt="pyntvenstre" />
