--- a/src/pages/listview.astro
+++ b/src/pages/listview.astro
@@ -26,31 +26,43 @@ import FilmCard from "../components/FilmCard.astro";
         <FilmCard image="/lillefro.png" alt="Produkt 1" title="Lille Frø" description="8" />
         <FilmCard image="/2.png" alt="Produkt 1" title="Ræven og nissen" description="9" />
         <FilmCard image="/3.png" alt="Produkt 1" title="Flagermusen" description="4" />
-        <FilmCard image="/4.png" alt="Produkt 1" title="En lille smule" description="9" />
+        <FilmCard image="/udskiftes.png" alt="Produkt 1" title="En lille smule" description="9" />
+        <FilmCard image="/2.png" alt="Produkt 1" title="Ræven og nissen" description="9" />
+        <FilmCard image="/3.png" alt="Produkt 1" title="Flagermusen" description="4" />
+        <FilmCard image="/udskiftes.png" alt="Produkt 1" title="En lille smule" description="9" />
       </CardContainer>
     </section>
     <section class="Cardcontainer w-screen relative left-1/2 -translate-x-1/2 mb-10">
       <CardContainer title="Nyheder">
-        <FilmCard image="/lillefro.png" alt="Produkt 1" title="Lille Frø" description="8" />
+        <FilmCard image="/Nyheder_1.png" alt="Produkt 1" title="De små vilde: forår" description="10" />
+        <FilmCard image="/Nyheder_2.png" alt="Produkt 1" title="Slubre" description="4" />
+        <FilmCard image="/Nyheder_3.png" alt="Produkt 1" title=" Min oldefars histore - fisketuren" description="9" />
+        <FilmCard image="/Nyheder_4.png" alt="Produkt 1" title="Lille tut episode 6: Pindsvinet" description="7" />
         <FilmCard image="/2.png" alt="Produkt 1" title="Ræven og nissen" description="9" />
         <FilmCard image="/3.png" alt="Produkt 1" title="Flagermusen" description="4" />
-        <FilmCard image="/4.png" alt="Produkt 1" title="En lille smule" description="9" />
+        <FilmCard image="/udskiftes.png" alt="Produkt 1" title="En lille smule" description="9" />
       </CardContainer>
     </section>
     <section class="Cardcontainer w-screen relative left-1/2 -translate-x-1/2 mb-10">
       <CardContainer title="For de yngste">
-        <FilmCard image="/lillefro.png" alt="Produkt 1" title="Lille Frø" description="8" />
+        <FilmCard image="/yngste_1.png" alt="Produkt 1" title="Lillefinger - Ødeskoven" description="5" />
+        <FilmCard image="/yngste_2.png" alt="Produkt 1" title="Ville og Vilde kanin" description="29" />
+        <FilmCard image="/yngste_3.png" alt="Produkt 1" title="Cirkeline - Storbyens mus" description="62" />
+        <FilmCard image="/Nyheder_4.png" alt="Produkt 1" title="Lille tut episode 6: Pindsvinet" description="7" />
         <FilmCard image="/2.png" alt="Produkt 1" title="Ræven og nissen" description="9" />
         <FilmCard image="/3.png" alt="Produkt 1" title="Flagermusen" description="4" />
-        <FilmCard image="/4.png" alt="Produkt 1" title="En lille smule" description="9" />
+        <FilmCard image="/udskiftes.png" alt="Produkt 1" title="En lille smule" description="9" />
       </CardContainer>
     </section>
     <section class="Cardcontainer w-screen relative left-1/2 -translate-x-1/2 mb-10">
       <CardContainer title="For de ældste">
-        <FilmCard image="/lillefro.png" alt="Produkt 1" title="Lille Frø" description="8" />
+        <FilmCard image="/Ældste_1.png" alt="Produkt 1" title="Orla Frøsnapper" description="12" />
+        <FilmCard image="/Ældste_2.png" alt="Produkt 1" title="På tur med far - Lillesøster Lucia 5:6" description="19" />
+        <FilmCard image="/Ældste_3.png" alt="Produkt 1" title="Min mosters historie - Det sorte tegn" description="10" />
+        <FilmCard image="/Ældste_4.png" alt="Produkt 1" title="Ballerina" description="11" />
         <FilmCard image="/2.png" alt="Produkt 1" title="Ræven og nissen" description="9" />
         <FilmCard image="/3.png" alt="Produkt 1" title="Flagermusen" description="4" />
-        <FilmCard image="/4.png" alt="Produkt 1" title="En lille smule" description="9" />
+        <FilmCard image="/udskiftes.png" alt="Produkt 1" title="En lille smule" description="9" />
       </CardContainer>
     </section>
   </main>
