--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -36,7 +36,9 @@
   --color-accent-600: #cc6a28;
   --color-hover-200: #FACFAE;
   --color-active-100:#FDE9D7;
+  --color-card-100:#ECC085;
   --color-text-500: #492B0B
+
 
   /*Typografi */
   --font-sans: "Kanit", sans-serif;
