--- a/src/pages/singleview.astro
+++ b/src/pages/singleview.astro
@@ -1,16 +1,71 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
-import Link from "../components/Link.astro";
-import { Image } from "astro:assets";
-import thumbsup from "../assets/images/thumbsup.png";
 import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
-import Button from "../components/Button.astro";
+import CardContainer from "../components/CardContainer.astro";
+import FilmCard from "../components/FilmCard.astro";
 ---
 
 <MainLayout title="Titel">
+  <a href="/listview" class="ml-4 md:ml-23 flex items-center gap-2 text-black hover:underline">
+    <span class="text-xl">←</span>
+    <span>Gå tilbage</span>
+  </a>
   <main class="container mx-auto p-4">
-    <Heading htmlheading="h1">Lav noget flot!</Heading>
-    <Text teksttype="brødtekst">Så bliver Anders glad:-)</Text>
+    <div class="font-bold mb-5">
+      <Heading htmlheading="h1" size="large2">Rita og krokodille: Skovturen</Heading>
+    </div>
+    <div class="grid md:grid-cols-[2fr_1fr] gap-10 md:gap-20">
+      <div class="relative w-fit">
+        <img src="/rita_single.png" alt="Rita" />
+
+        <div class="absolute inset-0 flex items-center justify-center">
+          <img src="/brun_play.svg" class="w-50 h-18 animate-jump animate-infinite animate-duration-[4000ms] animate-delay-0 animate-ease-linear" alt="Play" />
+        </div>
+      </div>
+
+      <div class="bg-card-100 rounded-md p-8">
+        <div class="mb-4 inline-flex items-center gap-3 px-4 py-1 bg-none border-2 border-secondary-500 rounded-full text-black">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 fill-secondary-500">
+            <polygon points="12,4 20,20 4,20"></polygon>
+          </svg>
+          <span>Tilladt for alle</span>
+        </div>
+        <div class="font-bold">
+          <Heading htmlheading="h2" size="large3">Handler om:</Heading>
+        </div>
+        <Text teksttype="brødtekst" size="text-xl"> Vennerne skal ud og samle kastanjer i skoven. Rita formaner Krokodille at blive på stien, så han ikke farer vild. Men da hun ser et helt tæppe af glitrende kastajner glemmer hun alt, hvad hun har sagt. I jagten på de flotte kastajner glemmer hun alt om stien og farer vild. Krokodille hjælper hende at finde tilbage. </Text>
+        <Text teksttype="brødtekst" size="text-xl"> <span class="font-bold"> Instruktør:</span> Siri Melchior (Danmark, 2013) </Text>
+        <div class="flex items-center gap-3 mt-1">
+          <div class="scale-180"><img src="/schedule.svg" alt="klokke" /></div>
+          <Text teksttype="brødtekst" size="text-xl"> 5 min </Text>
+        </div>
+        <div class="inline-block px-4 py-1 bg-none border-2 border-secondary-500 rounded-full text-black">Venskab</div>
+        <div class="inline-block px-4 py-1 bg-none border-2 border-secondary-500 rounded-full text-black">Skovture</div>
+        <div class="inline-block px-4 py-1 bg-none border-2 border-secondary-500 rounded-full text-black">Fare vildt</div>
+      </div>
+    </div>
+    <section class="w-screen relative left-1/2 -translate-x-1/2 mb-10 mt-10">
+      <CardContainer title="Se hele serien">
+        <FilmCard image="/Serie_1.png" alt="Produkt 1" title="Rita og Krokodille: Blåbær" description="5" />
+        <FilmCard image="/Serie_2.png" alt="Produkt 1" title="Rita og Krokodille: Skovturen" description="5" />
+        <FilmCard image="/Serie_3.png" alt="Produkt 1" title="Rita og Krokodille: I Biografen" description="5" />
+        <FilmCard image="/Serie_4.png" alt="Produkt 1" title="Rita og Krokodille: Jul" description="5" />
+        <FilmCard image="/2.png" alt="Produkt 1" title="Ræven og nissen" description="9" />
+        <FilmCard image="/3.png" alt="Produkt 1" title="Flagermusen" description="4" />
+        <FilmCard image="/udskiftes.png" alt="Produkt 1" title="En lille smule" description="9" />
+      </CardContainer>
+    </section>
+    <section class="w-screen relative left-1/2 -translate-x-1/2 mb-10 mt-10">
+      <CardContainer title="Minder om">
+        <FilmCard image="/lillefro.png" alt="Produkt 1" title="Lille Frø" description="8" />
+        <FilmCard image="/2.png" alt="Produkt 1" title="Ræven og nissen" description="9" />
+        <FilmCard image="/3.png" alt="Produkt 1" title="Flagermusen" description="4" />
+        <FilmCard image="/udskiftes.png" alt="Produkt 1" title="En lille smule" description="9" />
+        <FilmCard image="/2.png" alt="Produkt 1" title="Ræven og nissen" description="9" />
+        <FilmCard image="/3.png" alt="Produkt 1" title="Flagermusen" description="4" />
+        <FilmCard image="/udskiftes.png" alt="Produkt 1" title="En lille smule" description="9" />
+      </CardContainer>
+    </section>
   </main>
 </MainLayout>
