--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,33 +1,33 @@
 ---
+import Button from "../components/Button.astro";
+import Text from "./Text.astro";
+
 const pathname = new URL(Astro.request.url).pathname;
 const currentPath = pathname.slice(1); // remove the first "/"
 ---
 
-<header x-data="{ showmenu: false }" class="">
-  <div id="navbar" class="container mx-auto p-4 flex flex-row justify-between items-center">
-    <div id="logo" class="">
-      <a href="/src/pages/index.astro" class="font-display text-4xl">Logo</a>
+<header class="bg-[url('/src/assets/images/grønmenu.svg')] bg-no-repeat bg-contain bg-top md:min-h-[150px]">
+  <div class="container mx-auto p-4 flex flex-row justify-between items-center pt-1 md:pt-6">
+    <!-- Logo -->
+    <div id="logo" class="w-30 md:w-50 md:pt-2 md:pb-0">
+      <a href="http://src/pages/index.astro">
+        <img src="/src/assets/images/Logo.svg" alt="Logo" />
+      </a>
     </div>
-    <nav id="desktopmenu" class="hidden lg:block">
-      <ul class="flex flex-row gap-4">
-        <li class=""><a href="/" class={currentPath === "" ? "italic font-bold" : "italic"}>Forside</a></li><!-- alternativt: lav et <a href="">Link</a>, hvis du ikke vil bruge Link.astro komponenten -->
-        <li class=""><a href="/listview/" class={currentPath === "listview/" ? "italic font-bold" : "italic"}>Liste</a></li>
-        <li class=""><a href="/singleview/" class={currentPath === "singleview/" ? "italic font-bold" : "italic"}>Single</a></li>
-        <li class=""><a href="/komponentbibliotek/" class={currentPath === "komponentbibliotek/" ? "italic font-bold" : "italic"}>Komponentbibliotek</a></li>
-      </ul>
+
+    <!--Søgefelt-->
+    <nav class="flex flex-row items-center gap-2 -mt-2">
+      <form action="/søgeresultater" method="get" class="w-36 sm:w-64">
+        <input type="search" name="q" class="w-full py-1 sm:py-2 px-2 border-[#A3B481] rounded-md
+                  bg-[#A3B481] bg-no-repeat bg-right
+                  bg-[url('/src/assets/images/søgeicon.svg')]
+                  bg-[length:1rem] sm:bg-[length:1.5rem]" style="box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);" />
+      </form>
+
+      <!-- Log in knap -->
+      <a href="http://src/pages/listview.astro" class="text-sm sm:text-base">
+        <Text><Button>Log in</Button></Text>
+      </a>
     </nav>
-    <button id="burgermenu" class="lg:hidden" x-on:click="showmenu = ! showmenu"
-      ><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"></path>
-      </svg>
-    </button>
   </div>
-  <nav id="mobilmenu" class="flex flex-col content-center" x-show="showmenu" x-transition x-on:click="showmenu = false" x-on:click.outside="showmenu = false">
-    <ul class="border-t-2 border-b-2 border-black">
-      <li class="text-center py-2"><a href="/" class={currentPath === "" ? "italic font-bold" : "italic"}>Forside</a></li>
-      <li class="text-center py-2"><a href="src/pages/listview.astro" class={currentPath === "" ? "italic font-bold" : "italic"}>Liste</a></li>
-      <li class="text-center py-2"><a href="src/pages/singleview.astro" class={currentPath === "" ? "italic font-bold" : "italic"}>Single</a></li>
-      <li class="text-center py-2"><a href="/komponentbibliotek/" class={currentPath === "komponentbibliotek/" ? "italic font-bold" : "italic"}>Komponentbibliotek</a></li>
-    </ul>
-  </nav>
 </header>
