--- a/src/components/CardContainer.astro
+++ b/src/components/CardContainer.astro
@@ -5,7 +5,7 @@ const { title = "" } = Astro.props;
 
 <section class="p-8 bg-top h-110 cardcontainer" style="background-image: url('/cardbg.png')">
   <div class="ml-1 mt-8 mb-3">
-    <Heading htmlheading="h2" size="large2" stylingclasses="font-bold text-[10px] md:text-[30px]">
+    <Heading htmlheading="h2" size="medium" font="sans" stylingclasses="font-bold text-[10px] md:text-[30px]">
       {title}
     </Heading>
   </div>
