--- a/src/pages/komponentbibliotek.astro
+++ b/src/pages/komponentbibliotek.astro
@@ -19,19 +19,19 @@ import CardContainer from "../components/CardContainer.astro";
     <section>
       <Heading htmlheading="h2" size="medium">Typografi & overskrifter</Heading>
       <p class="pt-5">Kanit</p>
-      <Heading htmlheading="h1" size="large">h1 - Web - sans</Heading>
-      <Heading htmlheading="h1" size="medium">h1 - Tablet - sans</Heading>
-      <Heading htmlheading="h1" size="small">h1 - Mobile - sans</Heading>
+      <Heading htmlheading="h1" size="large" font="display">h1 - Web - sans</Heading>
+      <Heading htmlheading="h1" size="medium" font="display">h1 - Tablet - sans</Heading>
+      <Heading htmlheading="h1" size="small" font="display">h1 - Mobile - sans</Heading>
       <p class="pt-5">Catmaran</p>
-      <Heading htmlheading="h1" size="large2" font="serif">h1 - Web - serif</Heading>
-      <Heading htmlheading="h2" size="medium2" font="serif">h2 - Tablet - serif</Heading>
-      <Heading htmlheading="h3" size="small2" font="serif">h3 - Mobile - serif</Heading>
+      <Heading htmlheading="h1" size="large" font="display">h1 - Web - serif</Heading>
+      <Heading htmlheading="h2" size="medium" font="sans">h2 - Tablet - serif</Heading>
+      <Heading htmlheading="h3" size="small" font="sans">h3 - Mobile - serif</Heading>
       <p class="pt-5">Titillium Web</p>
-      <Text teksttype="brødtekst" size="large3">
+      <Text teksttype="brødtekst" size="large" font="serif">
         Her er en sektion brødtekst til web: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam dolorem doloremque commodi eaque quisquam quasi recusandae veniam. Corporis totam <Link href="#">Default link: </Link> reiciendis quibusdam ratione iure aut, numquam tenetur voluptatem exercitationem sequi enim!
       </Text>
-      <Text teksttype="brødtekst" size="medium3"> Her en sektion brødtekst til mobile: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam dolorem doloremque commodi eaque quisquam quasi recusandae veniam. Corporis totam reiciendis quibusdam ratione iure aut, numquam tenetur voluptatem exercitationem sequi enim! </Text>
-      <Text teksttype="brødtekst" size="small3"> Her en sektion brødtekst til mobile: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam dolorem doloremque commodi eaque quisquam quasi recusandae veniam. Corporis totam reiciendis quibusdam ratione iure aut, numquam tenetur voluptatem exercitationem sequi enim! </Text>
+      <Text teksttype="brødtekst" size="medium" font="serif"> Her en sektion brødtekst til mobile: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam dolorem doloremque commodi eaque quisquam quasi recusandae veniam. Corporis totam reiciendis quibusdam ratione iure aut, numquam tenetur voluptatem exercitationem sequi enim! </Text>
+      <Text teksttype="brødtekst" size="small" font="serif"> Her en sektion brødtekst til mobile: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam dolorem doloremque commodi eaque quisquam quasi recusandae veniam. Corporis totam reiciendis quibusdam ratione iure aut, numquam tenetur voluptatem exercitationem sequi enim! </Text>
     </section>
     <!-- slut på typografi -->
     <hr class="my-4" />
