--- a/src/components/FilmCard.astro
+++ b/src/components/FilmCard.astro
@@ -11,7 +11,7 @@ const { image = "/card.jpg", alt = "Card image", title, description } = Astro.pr
   </figure>
   <div class="mt-1">
     <div>
-      <Heading htmlheading="h2" size="large3" stylingclasses="font-bold text-[10px] md:text-[20px]">{title}</Heading>
+      <Heading htmlheading="h2" size="medium" font="sans" stylingclasses="font-bold text-[10px] md:text-[20px]">{title}</Heading>
     </div>
     <div class="flex items-center gap-3 mt-1">
       <div class="scale-150"><img src="/schedule.svg" alt="klokke" /></div>
