--- a/src/components/Text.astro
+++ b/src/components/Text.astro
@@ -4,8 +4,10 @@ const { teksttype = "brødtekst", stylingclasses = "" } = Astro.props;
 
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige størrelser.
 const sizeClasses = {
-  konsultativ: "text-sm",
-  brødtekst: "text-xl my-4",
+  statement: "text-2xl italic text-center bg-black p-8 text-white mb-4",
+  manchet: "prose text-xl my-4 italic",
+  brødtekst: "text my-4",
+  konsultativ: "text-sm mb-4",
 };
 ---
 
