--- a/src/pages/listview.astro
+++ b/src/pages/listview.astro
@@ -13,7 +13,7 @@ import FilmCard from "../components/FilmCard.astro";
   <main class="container mx-auto p-4">
     <section>
       <div class="text-center mt-10 mb-10">
-        <Heading htmlheading="h1" size="large">Hvad søger du?</Heading>
+        <Heading htmlheading="h1" size="large" font="display">Hvad søger du?</Heading>
       </div>
       <div class="flex gap-5 justify-center mb-30">
         <Dropdown title="Alder" items={["3 år", "4 år", "5 år", "6 år", "7år"]} />
