--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ import Button from "../components/Button.astro";
       </h1>
 
       <div class="pt-5 animate-bounce animate-infinite animate-duration-[2000ms] animate-delay-0 animate-ease-in">
-        <Text><Button>Log in</Button></Text>
+        <a href="/listview"> <Text><Button>Log in</Button></Text></a>
       </div>
       <div class="absolut w-25 md:w-60">
         <img src="src/assets/images/mus2.svg" alt="mus" />
