--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ const currentPath = pathname.slice(1); // remove the first "/"
   <div class="container mx-auto p-4 flex flex-row justify-between items-center pt-1 md:pt-6">
     <!-- Logo -->
     <div id="logo" class="w-30 md:w-50 md:pt-2 md:pb-0">
-      <a href="http://src/pages/index.astro">
+      <a href="/">
         <img src="/src/assets/images/Logo.svg" alt="Logo" />
       </a>
     </div>
@@ -25,8 +25,8 @@ const currentPath = pathname.slice(1); // remove the first "/"
       </form>
 
       <!-- Log in knap -->
-      <a href="http://src/pages/listview.astro" class="text-sm sm:text-base">
-        <Text><Button>Log in</Button></Text>
+      <a href="/listview" class="text-sm sm:text-base">
+        <Button>Log in</Button>
       </a>
     </nav>
   </div>
