--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,7 +26,7 @@ const currentPath = pathname.slice(1); // remove the first "/"
 
       <!-- Log in knap -->
       <a href="/listview" class="text-sm sm:text-base">
-        <Button>Log in</Button>
+        <Button size="medium">Log ind</Button>
       </a>
     </nav>
   </div>
