--- a/src/pages/listview.astro
+++ b/src/pages/listview.astro
@@ -23,7 +23,9 @@ import FilmCard from "../components/FilmCard.astro";
     </section>
     <section class="Cardcontainer w-screen relative left-1/2 -translate-x-1/2 mb-10">
       <CardContainer title="Se videre">
-        <FilmCard image="/lillefro.png" alt="Produkt 1" title="Lille Frø" description="8" />
+        <a href="/singleview">
+          <FilmCard image="/lillefro.png" alt="Produkt 1" title="Lille Frø" description="8" />
+        </a>
         <FilmCard image="/2.png" alt="Produkt 1" title="Ræven og nissen" description="9" />
         <FilmCard image="/3.png" alt="Produkt 1" title="Flagermusen" description="4" />
         <FilmCard image="/udskiftes.png" alt="Produkt 1" title="En lille smule" description="9" />
