--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -3,7 +3,7 @@
 const { variant = "primary", size = "medium" } = Astro.props;
 
 //Definer den styling (Tailwind classes, der gør sig gældende for alle knapper)
-const buttonStyling = " px-10 py-2";
+const buttonStyling = "px-4 py-2 md:px-10 md:py-2";
 
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige varianter
 const variantClasses = {
@@ -12,9 +12,10 @@ const variantClasses = {
 
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskelligeog størrelser.
 const sizeClasses = {
-  large: "text-4xl",
-  medium: "text-xl",
-  small: "text-medium",
+  large: "text-2xl md:text-4xl",
+  medium: "text-sm md:text-xl",
+  small: "text-sm md:text-base",
+  xsmall: "text-xs md:text-sm",
 };
 ---
 
