--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,11 +2,11 @@
 
 ---
 
-<footer class="bg-accent-500 text-black">
+<footer class="bg-accent-600 text-black">
   <div class="grid md:grid-cols-3 mx-auto p-10 md:gap-20">
     <div class="gap-2 flex flex-col pb-10">
-      <a href="http://">logo her</a>
-      <a href="http://">logo her</a>
+      <img class="w-50 md:w-70" src="src/assets/images/Logo.svg" alt="logo" />
+      <img class="w-40 md:w-50 pt-5" src="src/assets/images/Footer/FILMSTRIBEN.svg" alt="filmstriben" />
     </div>
     <div class="grid grid-cols-2 gap-10 md:contents">
       <div class="gap-2 flex flex-col">
