--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Button from "../components/Button.astro";
 <MainLayout title="Titel">
   <main class="container mx-auto p-4">
     <section class="text-center mx-auto pt-15 relative">
-      <h1 class="font-display text-[26px] md:text-[50px]">
+      <h1 class="font-display text-[15px] md:text-[50px]">
         UDFORSK EN VERDEN AF
         <span class="text-blue-700">L</span>
         <span class="text-orange-700">Æ</span>
@@ -23,56 +23,56 @@ import Button from "../components/Button.astro";
         VIDEOER
       </h1>
 
-      <div class="pt-5 animate-bounce animate-infinite animate-duration-[2000ms] animate-delay-0 animate-ease-in">
+      <div class="pt-4 animate-bounce animate-infinite animate-duration-[2000ms] animate-delay-0 animate-ease-in">
         <a href="/listview"> <Text><Button>Log in</Button></Text></a>
       </div>
-      <div class="absolut w-25 md:w-60">
+      <div class="absolute w-20 md:w-50 top-25 md:top-40">
         <img src="src/assets/images/mus2.svg" alt="mus" />
       </div>
-      <div class="absolute w-23 md:w-55 top-20 md:top-5 right-0">
+      <div class="absolute w-15 md:w-55 top-20 md:top-30 right-0">
         <img src="src/assets/images/billefjernsyn.png" alt="billefjernsyn" />
       </div>
-      <div class="absolute w-22 md:w-45 top-47 md:top-55 right-15 md:right-60">
+      <div class="absolute w-15 md:w-45 top-40 md:top-78 right-0 md:right-55">
         <img src="src/assets/images/popcorn2.svg" alt="popcorn" />
       </div>
     </section>
-    <section class="absolute top-65 md:top-70 left-33 md:left-115">
-      <p class="text-[12px] md:text-[26px]">DOWNLOAD BØRNEBIFFEN PÅ DIN ENHED</p>
-      <div class="flex flex-col items-center pt-2 gap-1 md:pt-4 md:gap-2">
+    <section class="absolute top-65 md:top-120 left-33 md:left-115">
+      <p class="text-[8px] md:text-[26px]">DOWNLOAD BØRNEBIFFEN PÅ DIN ENHED</p>
+      <div class="flex flex-col items-center pt-4 gap-1 md:pt-4 md:gap-2">
         <img class="w-25 md:w-40" src="src/assets/images/appstore.svg" alt="appstore" />
         <img class="w-25 md:w-40" src="src/assets/images/googleplay.svg" alt="googleplay" />
       </div>
     </section>
-    <div class="absolute top-58 left-26 md:top-65 md:left-106 animate-jump animate-infinite animate-duration-[2000ms] animate-delay-0 animate-ease-linear">
+    <div class="absolute top-58 left-26 md:top-115 md:left-106 animate-jump animate-infinite animate-duration-[2000ms] animate-delay-0 animate-ease-linear">
       <img src="src/assets/images/pyntvenstre.svg" alt="pyntvenstre" />
     </div>
-    <div class="absolute top-58 right-25 md:top-65 md:right-113 animate-jump animate-infinite animate-duration-[2000ms] animate-delay-0 animate-ease-linear">
+    <div class="absolute top-58 right-25 md:top-115 md:right-117 animate-jump animate-infinite animate-duration-[2000ms] animate-delay-0 animate-ease-linear">
       <img src="src/assets/images/pynthøjre.svg" alt="pynthøjre" />
     </div>
-    <section class="p-10 md:p-10">
-      <div class="text-center mx-auto pt-15 pb-10">
-        <Heading htmlheading="h1"
-          >DESIGNET TIL
-          <span class="text-yellow-500">B</span>
-          <span class="text-green-700">Ø</span>
-          <span class="text-blue-700">R</span>
-          <span class="text-pink-700">N</span> AF DANSKE BIOGRAFER</Heading
-        >
-      </div>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
-        <div>
-          <h2>Støtter dansk og nordisk børnekultur</h2>
-          <p>Vi viser kortfilm fra danske animationsskoler, talentfulde børnefilmskabere og nordiske studier. Det giver variation i stil og fortællinger, styrker den kulturelle forankring og giver børn adgang til mere kreative og originale film end dem, man finder i mainstream universer.</p>
-        </div>
-        <div>
-          <h2>Pædagogisk kuratering</h2>
-          <p>Alle film på Børnebiffen er nøje kurateret med fokus på læring, følelser og udvikling. Filmene giver mulighed for samtaler efterfølgende og understøtter temaer som empati, mod, fantasi og venskab. Indholdet er skabt til børn – ikke styret af kommercielle trends.</p>
-        </div>
-        <div>
-          <h2>Trygt og overskueligt miljø</h2>
-          <p>I Børnebiffen har vi skabt et online miljø, der er mindre overstimulerende end de almindelige streamingtjenester. Lyden er rolig, udtrykket er enkelt, og stemningen er tryg. Her må børn bevæge sig, stille spørgsmål og reagere frit – uden at blive overvældet.</p>
-        </div>
-      </div>
-    </section>
   </main>
+  <section class="p-10 md:p-10">
+    <div class="text-center mx-auto pt-35 md:pt-75 pb-10">
+      <h1 class="font-display text-[15px] md:text-[50px]">
+        DESIGNET TIL
+        <span class="text-yellow-500">B</span>
+        <span class="text-green-700">Ø</span>
+        <span class="text-blue-700">R</span>
+        <span class="text-pink-700">N</span> AF DANSKE BIOGRAFER
+      </h1>
+    </div>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-10 pb-10">
+      <div>
+        <h2 class="font-bold">Støtter dansk og nordisk børnekultur</h2>
+        <p>Vi viser kortfilm fra danske animationsskoler, talentfulde børnefilmskabere og nordiske studier. Det giver variation i stil og fortællinger, styrker den kulturelle forankring og giver børn adgang til mere kreative og originale film end dem, man finder i mainstream universer.</p>
+      </div>
+      <div>
+        <h2 class="font-bold">Pædagogisk kuratering</h2>
+        <p>Alle film på Børnebiffen er nøje kurateret med fokus på læring, følelser og udvikling. Filmene giver mulighed for samtaler efterfølgende og understøtter temaer som empati, mod, fantasi og venskab. Indholdet er skabt til børn – ikke styret af kommercielle trends.</p>
+      </div>
+      <div>
+        <h2 class="font-bold">Trygt og overskueligt miljø</h2>
+        <p>I Børnebiffen har vi skabt et online miljø, der er mindre overstimulerende end de almindelige streamingtjenester. Lyden er rolig, udtrykket er enkelt, og stemningen er tryg. Her må børn bevæge sig, stille spørgsmål og reagere frit – uden at blive overvældet.</p>
+      </div>
+    </div>
+  </section>
 </MainLayout>
