--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ const currentPath = pathname.slice(1); // remove the first "/"
     <!-- Logo -->
     <div id="logo" class="w-30 md:w-50 md:pt-2 md:pb-0">
       <a href="/">
-        <img src="/src/assets/images/Logo.svg" alt="Logo" />
+        <img src="/Logo.svg" alt="Logo" />
       </a>
     </div>
 
