--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,27 +27,27 @@ import Button from "../components/Button.astro";
         <a href="/listview"> <Text><Button>Log in</Button></Text></a>
       </div>
       <div class="absolute w-20 md:w-50 top-25 md:top-40">
-        <img src="src/assets/images/mus2.svg" alt="mus" />
+        <img src="/mus2.svg" alt="mus" />
       </div>
       <div class="absolute w-15 md:w-55 top-20 md:top-30 right-0">
-        <img src="src/assets/images/billefjernsyn.png" alt="billefjernsyn" />
+        <img src="/billefjernsyn.png" alt="billefjernsyn" />
       </div>
       <div class="absolute w-15 md:w-45 top-40 md:top-78 right-0 md:right-55">
-        <img src="src/assets/images/popcorn2.svg" alt="popcorn" />
+        <img src="/popcorn2.svg" alt="popcorn" />
       </div>
     </section>
     <section class="absolute top-65 md:top-120 left-33 md:left-115">
       <p class="text-[8px] md:text-[26px]">DOWNLOAD BØRNEBIFFEN PÅ DIN ENHED</p>
       <div class="flex flex-col items-center pt-4 gap-1 md:pt-4 md:gap-2">
-        <img class="w-25 md:w-40" src="src/assets/images/appstore.svg" alt="appstore" />
-        <img class="w-25 md:w-40" src="src/assets/images/googleplay.svg" alt="googleplay" />
+        <img class="w-25 md:w-40" src="/appstore.svg" alt="appstore" />
+        <img class="w-25 md:w-40" src="/googleplay.svg" alt="googleplay" />
       </div>
     </section>
     <div class="absolute top-58 left-26 md:top-115 md:left-106 animate-jump animate-infinite animate-duration-[2000ms] animate-delay-0 animate-ease-linear">
-      <img src="src/assets/images/pyntvenstre.svg" alt="pyntvenstre" />
+      <img src="/pyntvenstre.svg" alt="pyntvenstre" />
     </div>
     <div class="absolute top-58 right-25 md:top-115 md:right-117 animate-jump animate-infinite animate-duration-[2000ms] animate-delay-0 animate-ease-linear">
-      <img src="src/assets/images/pynthøjre.svg" alt="pynthøjre" />
+      <img src="/pynthøjre.svg" alt="pynthøjre" />
     </div>
   </main>
   <section class="p-10 md:p-10">
