--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@ const currentPath = pathname.slice(1); // remove the first "/"
       <form action="/søgeresultater" method="get" class="w-36 sm:w-64">
         <input type="search" name="q" class="w-full py-1 sm:py-2 px-2 border-[#A3B481] rounded-md
                   bg-[#A3B481] bg-no-repeat bg-right
-                  bg-[url('/src/assets/images/søgeicon.svg')]
+                  bg-[url('/søgeicon.svg')]
                   bg-[length:1rem] sm:bg-[length:1.5rem]" style="box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);" />
       </form>
 
