--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ const pathname = new URL(Astro.request.url).pathname;
 const currentPath = pathname.slice(1); // remove the first "/"
 ---
 
-<header class="bg-[url('/src/assets/images/grønmenu.svg')] bg-no-repeat bg-contain bg-top md:min-h-[150px]">
+<header class="bg-[url('/grønmenu.svg')] bg-no-repeat bg-contain bg-top md:min-h-[150px]">
   <div class="container mx-auto p-4 flex flex-row justify-between items-center pt-1 md:pt-6">
     <!-- Logo -->
     <div id="logo" class="w-30 md:w-50 md:pt-2 md:pb-0">
